# elf_diff

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  PR_CHECKLIST.md  README.md  codecov.yml  disappeared_symbols_overview.html  elf_diff  index.html  new_symbols_overview.html  pair_report_output.html  requirements.txt  setup.cfg  setup.py  similar_symbols_overview.html  stats.html  template.html
.github/workflows/: black_code_formatting.yml  codeql-analysis.yml  deploy_examples.yml  github-actions-black.yml  lint_README.yml  lint_generated_html.yml  lint_python_flake8.yml  local_package_build.yml  package_deploy.yml  python-app.yml  python_versions.yml  run_tests.yml  type_checking_mypy.yml  venv_local_package_install.yml
css/: elf_diff_general.css  layout.css
details/disappeared/: 0.html  1.html
details/new/: 7.html  8.html  9.html
details/similar/: 5.html
examples/simple/: pair_report_output.html
examples/simple/pair_report_multi_page/: appeared_symbols_overview.html  disappeared_symbols_overview.html  document.html  index.html  migrated_symbols_overview.html  new_symbols_overview.html  persisting_symbols_overview.html  similar_symbols_overview.html  statistics.html  stats.html
examples/simple/pair_report_multi_page/css/: elf_diff_general.css
examples/simple/pair_report_multi_page/details/appeared/: 10.html  11.html  21.html  22.html  23.html  24.html  7.html  8.html  9.html
examples/simple/pair_report_multi_page/details/disappeared/: 0.html  1.html  10.html  14.html  15.html  16.html  2.html  3.html  4.html  7.html  8.html
examples/simple2/: pair_report_output.html
examples/simple2/pair_report_multi_page/: appeared_symbols_overview.html  disappeared_symbols_overview.html  document.html  index.html  migrated_symbols_overview.html  new_symbols_overview.html  persisting_symbols_overview.html  similar_symbols_overview.html  statistics.html  stats.html
examples/simple2/pair_report_multi_page/css/: elf_diff_general.css
html/: details.html  frame_content.html  isolated_symbol_details_content.html  isolated_symbols_overview_content.html  mass_report_template.html  page.html  pair_report_base_index_page.html  pair_report_index_page.html  pair_report_single_page.html  pair_report_template.html  persisting_symbol_details_content.html  persisting_symbols_overview_content.html  similar_symbols_details_content.html  similar_symbols_overview_content.html  single_page_report_base.html  stats.html
html/css/: elf_diff_general.css
pair_report_multi_page/: disappeared_symbols_overview.html  index.html  new_symbols_overview.html  persisting_symbols_overview.html  similar_symbols_overview.html  stats.html
pair_report_multi_page/css/: elf_diff_general.css  layout.css
pair_report_multi_page/details/disappeared/: 0.html  1.html  2.html  5.html
pair_report_multi_page/details/new/: 12.html  7.html  8.html  9.html
pair_report_multi_page/details/persisting/: 3.html  4.html  6.html
pair_report_multi_page/details/similar/: 0.html  1.html  2.html  3.html  4.html  5.html
python/: requirements.txt
python/elf_diff/: auxiliary.py  binary.py  binary_pair.py  git.py  html.py  mass_report.py  pair_report.py  report.py  settings.py  symbol.py
scripts/: check_quality.sh  validate_package_version.sh
src/elf_diff/: __init__.py  __main__.py  auxiliary.py  binary.py  binary_file_format.py  binary_pair.py  binary_pair_settings.py  binutils.py  debug_information.py  default_plugins.py  document_explorer.py  error_handling.py  formatted_output.py  git.py  html.py  instruction_collector.py  jinja.py  mangling.py  mass_report.py  meta_tree.py  meta_tree_properties.py  pair_report.py  pair_report_document.py  plugin.py  report.py  settings.py  source_file.py  string_diff.py  symbol.py  symbol_extractor.py  symbol_selection.py  symbol_sizes.py  system_command.py  tree_addressable.py  tree_exception.py  value_tree.py
src/elf_diff/deprecated/: mass_report.py
src/elf_diff/deprecated/j2/: mass_report_template.html
src/elf_diff/html/: isolated_symbols_overview_content.html  pair_report_index_page.html  pair_report_single_page.html  persisting_symbols_overview_content.html  similar_symbols_overview_content.html  single_page_report_base.html  stats.html
src/elf_diff/html/css/: elf_diff_general.css  layout.css
src/elf_diff/html/js/: dragbars.js  sorttable.js
src/elf_diff/plugins/export/html/: plugin.py
testing/: CMakeLists.txt  old_binary_info.txt  test.py  test_cpp_symbols.py
testing/src/new/: test.cpp
testing/src/old/: test.cpp
tests/: CMakeLists.txt  README_build_test_archives.md  new_binary_info.txt  test.py  test_cpp_symbols.py  test_main.py  test_requirements.txt  toolchain_gcc-arm-linux-gnueabi.cmake  toolchain_ghs.cmake
tests/elf_diff_test/: args_watcher.py  command_line_args.py  elf_diff_execution.py  module_search_path.py  subprocess.py  test_binaries.py  test_in_subdirs.py
tests/ghs/: libelf_diff_test2_release_new.a.demangle.txt  libelf_diff_test2_release_old.a.demangle.txt  libelf_diff_test_release_new.a.demangle.txt  libelf_diff_test_release_old.a.demangle.txt
tests/plugin/: test_plugin.py
tests/src/new/: migration_test1.cpp  migration_test2.cpp  test.cpp  test2.cpp
tests/src/old/: migration_test1.cpp  migration_test2.cpp  test.cpp  test2.cpp
tests/test_cases/: test_command_line_args.py  test_cpp_symbols.py  test_document_integrity.py  test_symbol_migration.py
tests/x86_64/: reference_document.html  reference_document.json
tests/x86_64/reference_multi_page/: appeared_symbols_overview.html  document.html  index.html  migrated_symbols_overview.html  statistics.html
tests/x86_64/reference_multi_page/css/: elf_diff_general.css  layout.css
tests/x86_64/reference_multi_page/details/appeared/: 9.html
tests/x86_64/reference_multi_page/details/disappeared/: 2.html  3.html
tests/x86_64/reference_multi_page/details/migrated/: 1.html
tests/x86_64/reference_multi_page/details/persisting/: 0.html  1.html
tests/x86_64/reference_multi_page/details/similar/: 1.html  3.html  7.html
(+75 files in other folders)
