[metadata]
name = elf_diff
version = 0.0.0
license = GPL 3
description = A tool to compare elf binaries
long_description = file: README.md
author = noseglasses
author_email = shinynoseglasses@gmail.com
url = https://github.com/CapeLeidokos/elf_diff
classifiers=
   Development Status :: 4 - Beta
	 Environment :: Console
	 Intended Audience :: Developers
	 Intended Audience :: Education
	 License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	 Natural Language :: English
	 Operating System :: OS Independent
	 Programming Language :: Python :: 3
   Topic :: Software Development :: Bug Tracking
	 Topic :: Software Development :: Quality Assurance
	 Topic :: Utilities
	 Topic :: Education

[options]
packages = find:
package_dir =
    = src
include_package_data = True
install_requires =
python_requires = >=3.0

[options.packages.find]
where=src