[metadata]
name = elf_diff
version = attr: elf_diff.__version__
license = GPL 3
description = A tool to compare elf binaries
long_description = file: README.md
long_description_content_type = text/markdown
author = noseglasses
author_email = shinynoseglasses@gmail.com
url = https://github.com/noseglasses/elf_diff
classifiers=
   Development Status :: 4 - Beta
	 Environment :: Console
	 Intended Audience :: Developers
	 Intended Audience :: Education
	 License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	 Natural Language :: English
	 Operating System :: OS Independent
   Programming Language :: Python :: 3.6
   Programming Language :: Python :: 3.7
   Programming Language :: Python :: 3.8
   Programming Language :: Python :: 3.9
   Programming Language :: Python :: 3.10
   Topic :: Software Development :: Bug Tracking
	 Topic :: Software Development :: Quality Assurance
	 Topic :: Utilities
	 Topic :: Education

[options]
packages = find:
package_dir =
    = src
include_package_data = True
install_requires =
  setuptools-git
  jinja2
  pyyaml
  progressbar2
  GitPython
  weasyprint
  anytree
  dict2xml
python_requires = >=3.6

[options.entry_points]
console_scripts =
    elf_diff = elf_diff.__main__:main

[options.packages.find]
where=src
